# UMT

./: .gitignore  CLAUDE.md  README.md  audience_builder.html  campaign_creation.html  dashboard.html  login.html  pyproject.toml
.githooks/: post-commit
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  README.md  SETUP.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx  SearchableSelect.jsx  Sidebar.jsx  StepBar.jsx
frontend/src/contexts/: ApprovalsContext.jsx  AuthContext.jsx  CampaignContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAutosave.js
frontend/src/mocks/: handlers.js
frontend/src/pages/: Approvals.jsx  AudienceBuilder.jsx  CampaignCreation.jsx  CampaignDetail.jsx  Campaigns.jsx  Dashboard.jsx  Login.jsx  Message.jsx  Review.jsx  Schedule.jsx  Users.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css
src/: umt.py
templates/: audience_builder.html  base.html  campaign_creation.html  campaigns.html  dashboard.html  login.html  message.html  review.html  schedule.html
tests/: test_umt.py
