[project]
name = "umt"
version = "0.1.0"
authors = [
  {name = "UMT Team"}
]
description = "UMT - Universal Management Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
umt = "umt:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
